--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -23,3 +23,7 @@
 // @import "./components/group-cell";
 // @import "./components/side-bar";
 // @import "./components/search-bar";
+
+body {
+  font-family: Open Sans,sans-serif;
+}
