--- a/src/containers/MainLayout/style.scss
+++ b/src/containers/MainLayout/style.scss
@@ -6,38 +6,42 @@
   float: left;
 }
 
-.header-banner {
-  height: 35vh !important;
-  display: flex !important;
-  background: #03A9F4 !important;
-  flex-direction: column;
-  text-align: center;
-  .main-title {
-    color: white;
-    font-size: 5em;
-    margin-top: 3vh;
+.layout {
+  .ant-layout-header {
+    padding: 0 80px !important;
   }
-  .main-subtitle {
-    color: #f5f5f5;
+  .header-banner {
+    height: 35vh !important;
+    display: flex !important;
+    background: #03A9F4 !important;
+    flex-direction: column;
+    text-align: center;
+    .main-title {
+      color: white;
+      font-size: 5em;
+      margin-top: 3vh;
+      font-weight: 600;
+    }
+    .main-subtitle {
+      color: #f5f5f5;
+    }
+  }
+  
+  .ant-layout-content {
+    margin-top: -10vh;
+    padding-top: 0 !important;
+    .container {
+      background: rgb(240, 242, 245);
+      padding: 24px;
+      min-height: 280px;
+      border-radius: 1px;
+      box-shadow: 0px 4px 9px 0px #c5c5c5;
+    }
+  }
+  .layout-footer {
+    background: #ecedef;
+    text-align: center;
   }
 }
 
-.ant-layout-content {
-  margin-top: -10vh;
-  padding-top: 0 !important;
-  .container {
-    background: rgb(240, 242, 245);
-    padding: 24px;
-    min-height: 280px;
-    border-radius: 1px;
-    box-shadow: 0px 4px 9px 0px #c5c5c5;
-  }
-}
 
-.ant-layout-header {
-  padding: 0 80px !important;
-}
-
-.layout-footer {
-
-}
