--- a/src/components/MainLayout/style.scss
+++ b/src/components/MainLayout/style.scss
@@ -7,7 +7,8 @@
 }
 
 .layout {
-  .ant-layout-content {
+  .main-content {
+    padding: 50px;
     margin-top: -10vh;
     padding-top: 0 !important;
     .container {
@@ -24,4 +25,18 @@
   }
 }
 
+@media only screen and (max-width: 360px) {
+  .layout {
+    .main-content {
+      padding: 0px;
+      margin-top: 0vh;
+      padding-top: 0 !important;
+      .container {
+      }
+    }
+    .layout-footer {
+
+    }
+  }
+}
 
