--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -3,4 +3,15 @@
         width: 100%;
         max-width: 120px;
     }
+    .partners-container {
+
+    }
+    .privacy-policy-container {
+        margin-top: 5vh;
+        background: #dce2e4;
+        padding: 10px;
+        text-transform: uppercase;
+        font-size: 12px;
+        color: #606161;
+    }
 }
