--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -18,5 +18,9 @@
 
     .main-subtitle {
         color: #f5f5f5;
+        width: 75vw;
+        margin: 0 auto;
+        font-family: 'lato';
+        font-weight: 200;
     }
 }
