--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,6 +1,6 @@
 .header-banner {
     display: flex !important;
-    background: #03A9F4;
+    background: #002164;
     flex-direction: column;
     text-align: center;
     line-height: 1;
@@ -12,15 +12,20 @@
         color: white;
         font-size: 5em;
         margin-top: 3vh;
+        margin-bottom: 5vh;
         text-transform: uppercase;
         font-weight: 600;
     }
 
     .main-subtitle {
         color: #f5f5f5;
-        width: 75vw;
+        width: 50vw;
         margin: 0 auto;
-        font-family: 'lato';
+        font-family: 'lato', Arial, Helvetica, sans-serif;
         font-weight: 200;
+        font-size: 20px;
+        .senator-time {
+          font-weight: 800;
+        }
     }
 }
