--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,14 +1,19 @@
+@import '../../style/colors.scss';
+
 .header-banner {
     display: flex !important;
-    background: #002164;
+    background: $brand-color;
     flex-direction: column;
-    text-align: center;
     line-height: 1;
     height: auto;
     padding-bottom: 10vh;
     padding-top: 5vh;
+    img {
+        width: 100%;
+    }
     
     .main-title {
+        text-align: center;
         color: white;
         font-size: 5em;
         margin-top: 3vh;
@@ -18,14 +23,16 @@
     }
 
     .main-subtitle {
+    margin: 0 auto;
+    p {
         color: #f5f5f5;
         width: 50vw;
-        margin: 0 auto;
         font-family: 'lato', Arial, Helvetica, sans-serif;
-        font-weight: 200;
         font-size: 20px;
+        font-weight: 3000;
         .senator-time {
           font-weight: 800;
         }
+    }
     }
 }
