--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,29 +1,10 @@
-// // Third-party
-// @import "./vendor/mapbox-gl";
-
-// @import './mixins/all';
-
-// // Modules and Variables
-// @import "modules/colors";
-// @import "modules/utility";
-// // Partials
-// @import "./partials/base";
-// @import "./partials/reset";
-// @import "./partials/typography";
-// @import "./partials/buttons";
-
-// // Components
-// @import "./components/footer";
-// @import "./components/map";
-// @import "./components/main-dashboard";
-// @import "./components/popover";
-// @import "./components/event-list";
-// @import "./components/group-list";
-// @import "./components/event-cell";
-// @import "./components/group-cell";
-// @import "./components/side-bar";
-// @import "./components/search-bar";
+@import url('https://fonts.googleapis.com/css?family=Lato:300|Roboto+Condensed:700');
 
 body {
   font-family: Open Sans,sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Roboto Condensed';
+  font-weight: 700;
 }
