--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -23,16 +23,25 @@
     }
 
     .main-subtitle {
-    margin: 0 auto;
-    p {
-        color: #f5f5f5;
-        width: 50vw;
-        font-family: 'lato', Arial, Helvetica, sans-serif;
-        font-size: 20px;
-        font-weight: 3000;
-        .senator-time {
-          font-weight: 800;
+        margin: 0 auto;
+        p {
+            color: #f5f5f5;
+            width: 50vw;
+            font-family: 'lato', Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            font-weight: 300;
+            .senator-time {
+            font-weight: 800;
+            }
         }
     }
-    }
+}
+
+@media all and (max-width: 576px) {
+        .main-subtitle { 
+            text-align: center;
+            p {
+                width: initial!important;
+            }
+        }
 }
