--- a/src/components/EventCard/style.scss
+++ b/src/components/EventCard/style.scss
@@ -1,3 +1,5 @@
+@import '../../style/colors.scss';
+
 .event-card {
   border-radius: 5px;
   box-shadow: 0px 0px 5px #cacaca;
@@ -61,7 +63,7 @@
       justify-content: center;
       padding: 5px;
       // background: url(https://image.freepik.com/free-vector/city-map-background-with-star-middle_23-2147619494.jpg);
-      background: #2196f3;
+      background: $brand-color;
       background-size: cover;
       border-radius: 3px;
       font-size: 20px;
