--- a/src/components/EventCard/style.scss
+++ b/src/components/EventCard/style.scss
@@ -52,6 +52,9 @@
     }
   }
   .event-card-title {
+    .event-title-text {
+      padding-top: 35px;
+    }
     // height: 150px;
     // background: lightcyan
     .rsvp-btn {
@@ -115,6 +118,12 @@
 }
 
 .event-card-section-content {
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-bottom: 10px;
+}
+
+.event-card-section-top-content {
   padding-left: 35px;
   padding-right: 35px;
   padding-bottom: 10px;
