--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -13,5 +13,9 @@
         text-transform: uppercase;
         font-size: 12px;
         color: #606161;
+        a {
+            text-decoration: none;
+            color: #807b7b
+        }
     }
 }
