--- a/src/components/EventCard/style.scss
+++ b/src/components/EventCard/style.scss
@@ -73,7 +73,7 @@
       font-weight: 600;
       width: 150px;
       margin: 0 auto;
-      cursor: pointer;
+      cursor: not-allowed;
     }
   }
   .event-card-date {
@@ -93,7 +93,7 @@
       font-weight: 600;
       width: 150px;
       margin: 0 auto;
-      cursor: pointer;
+      cursor: not-allowed;
       a {
         text-decoration: none;
         color: white;
