--- a/src/components/EventCard/style.scss
+++ b/src/components/EventCard/style.scss
@@ -24,27 +24,11 @@
   }
   .event-card-header {
     z-index: 3;
-    .member-icon {
-      z-index: 3;
-      width: 50px;
-      height: 50px;
-      position: absolute;
-      border-radius: 50%;
-      margin-left: -15px;
-      margin-top: 3px;
-      overflow: hidden;
-      background: #e91e63;
-      box-shadow: 0px 0px 6px 0px #b7b4b4;
-      img {
-        z-index: 9999;
-        height: 50px;
-        width: 50px;
-      }
-    }
     .event-card-header-title {
-      margin-left: 50px;
+      text-align: center;
       .title {
         font-size: 20px;
+        font-weight: 600;
       }
       .subtitle {
         color: darkgrey;
