--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -4,7 +4,9 @@
         max-width: 120px;
     }
     .partners-container {
-
+      .partner {
+        margin-top: 15px;
+      }
     }
     .privacy-policy-container {
         margin-top: 5vh;
